--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
         }
         document.getElementById("result").innerHTML = result;
       }
+      
+      /*스크립트 이용해서 더블터치 방지*/
+      var table = document.getElementsByTagName('table')[0];
+table.addEventListener('touchstart', function(event) {
+  if (event.touches.length > 1) {
+    event.preventDefault();
+  }
+}, { passive: false });
+
+      
     </script>
   </head>
   <body>
