--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         background-color: #4CAF50;
         border: none;
         color: white;
+          width: 100%;
+
         padding: 4px 8px;
         text-align: center;
         text-decoration: none;
@@ -69,6 +71,8 @@
   /* 표 크기 조절 */
   table {
     width: 100%;
+      height: 300px;
+
   }
   
   /* 셀 크기 조절 */
