--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>항목별 수량 관리</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <script type='application/javascript' src='/path/to/fastclick.js'></script>
+    <script type='application/javascript' src='fastclick.js'></script>
 
 
     <style>
