--- a/index.html
+++ b/index.html
@@ -98,9 +98,92 @@
     </style>
     <script>
       var items = [
-        { name: "사과", unit: "개", quantity: 0 },
-        { name: "바나나", unit: "송이", quantity: 0 },
-        { name: "포도", unit: "단", quantity: 0 },
+   { name: "14인치냉동도우", unit: "박스", quantity: 0 },
+  { name: "11인치냉동도우", unit: "박스", quantity: 0 },
+  { name: "갈릭마요", unit: "개", quantity: 0 },
+  { name: "트러플마요", unit: "개", quantity: 0 },
+  { name: "렌치소스", unit: "개", quantity: 0 },
+  { name: "토마토소스", unit: "개", quantity: 0 },
+  { name: "세몰리나", unit: "개", quantity: 0 },
+  { name: "갈릭분말", unit: "개", quantity: 0 },
+  { name: "양파분말", unit: "개", quantity: 0 },
+  { name: "파프리카시즈닝", unit: "개", quantity: 0 },
+  { name: "오레가노분말", unit: "개", quantity: 0 },
+  { name: "코리엔더분말", unit: "개", quantity: 0 },
+  { name: "큐빈분말", unit: "개", quantity: 0 },
+  { name: "흑후추(조분)", unit: "개", quantity: 0 },
+  { name: "흑후추(분말)", unit: "개", quantity: 0 },
+  { name: "페퍼론치노 홀", unit: "개", quantity: 0 },
+  { name: "피클링스파이스", unit: "개", quantity: 0 },
+  { name: "라임주스", unit: "개", quantity: 0 },
+  { name: "레몬주스", unit: "개", quantity: 0 },
+  { name: "BBQ소스", unit: "개", quantity: 0 },
+  { name: "환만식초", unit: "개", quantity: 0 },
+  { name: "화이트식초", unit: "개", quantity: 0 },
+  { name: "트러플오일", unit: "개", quantity: 0 },
+  { name: "잡화청", unit: "개", quantity: 0 },
+  { name: "흰설탕", unit: "개", quantity: 0 },
+  { name: "꽃소금", unit: "개", quantity: 0 },
+  { name: "맛소금", unit: "개", quantity: 0 },
+  { name: "천일염(고운가루)", unit: "개", quantity: 0 },
+  { name: "마요네즈", unit: "개", quantity: 0 },
+  { name: "물엿", unit: "개", quantity: 0 },
+  { name: "하인즈케첩", unit: "개", quantity: 0 },
+  { name: "포마스오일", unit: "개", quantity: 0 },
+  { name: "엑스트라버진올리브오일", unit: "개", quantity: 0 },
+{ name: "통계피", unit: "개", quantity: 0 },
+{ name: "파마산블렌더", unit: "개", quantity: 0 },
+{ name: "흑설탕", unit: "개", quantity: 0 },
+{ name: "연유", unit: "개", quantity: 0 },
+{ name: "파프리카원액", unit: "개", quantity: 0 },
+{ name: "딜피클", unit: "개", quantity: 0 },
+{ name: "또띠아(10인치)", unit: "개", quantity: 0 },
+{ name: "메아플시럽", unit: "개", quantity: 0 },
+{ name: "치킨탑핑", unit: "개", quantity: 0 },
+{ name: "통베이컨", unit: "개", quantity: 0 },
+{ name: "슈레드체다치즈", unit: "개", quantity: 0 },
+{ name: "CK냉동흰다리새우(31/40)", unit: "개", quantity: 0 },
+{ name: "냉동페퍼로니", unit: "개", quantity: 0 },
+{ name: "냉동윙", unit: "개", quantity: 0 },
+{ name: "감자튀김", unit: "개", quantity: 0 },
+{ name: "엔카버터", unit: "개", quantity: 0 },
+{ name: "그라노파다노블록", unit: "개", quantity: 0 },
+{ name: "냉동망고퓨레", unit: "개", quantity: 0 },
+{ name: "매쉬드포테이토", unit: "개", quantity: 0 },
+{ name: "썬리치모짜렐라치즈", unit: "개", quantity: 0 },
+{ name: "베이크드빈", unit: "개", quantity: 0 },
+{ name: "레드키니빈", unit: "개", quantity: 0 },
+{ name: "치킨스톡", unit: "개", quantity: 0 },
+{ name: "오렌지테너", unit: "개", quantity: 0 },
+{ name: "흰우유", unit: "개", quantity: 0 },
+{ name: "사워크림", unit: "개", quantity: 0 },
+{ name: "액상마가린", unit: "개", quantity: 0 },
+{ name: "자숙옥수수", unit: "개", quantity: 0 },
+{ name: "킬바사소시지", unit: "개", quantity: 0 },
+{ name: "생크림", unit: "개", quantity: 0 },
+{ name: "돌파인애플캔", unit: "개", quantity: 0 },
+{ name: "자이언트옥수수캔", unit: "개", quantity: 0 },
+{ name: "토마토페이스트(작은캔)", unit: "개", quantity: 0 },
+{ name: "치폴레", unit: "개", quantity: 0 },
+{ name: "나쵸치즈캔", unit: "개", quantity: 0 },
+{ name: "할라피뇨캔", unit: "개", quantity: 0 },
+{ name: "스위트피클캔", unit: "개", quantity: 0 },
+{ name: "양파후레이크", unit: "개", quantity: 0 },
+{ name: "크러쉬드레드페퍼", unit: "개", quantity: 0 },
+{ name: "건파슬리", unit: "개", quantity: 0 },
+{ name: "블루치즈", unit: "개", quantity: 0 },
+{ name: "니트릴장갑(L사이즈)", unit: "개", quantity: 0 },
+{ name: "니트릴장갑(M사이즈)", unit: "개", quantity: 0 },
+{ name: "니트릴장갑(S사이즈)", unit: "개", quantity: 0 },
+{ name: "종이호일", unit: "개", quantity: 0 },
+{ name: "쿠킹호일", unit: "개", quantity: 0 },
+{ name: "위생팩(소)", unit: "개", quantity: 0 },
+{ name: "위생팩(대)", unit: "개", quantity: 0 },
+{ name: "위생비닐장갑", unit: "개", quantity: 0 },
+{ name: "지퍼백", unit: "개", quantity: 0 },
+{ name: "흰행주", unit: "묶음", quantity: 0 },
+{ name: "부탄가스", unit: "묶음", quantity: 0 }
+
         // 추가적인 항목들...
       ];
       
