--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
         background-color: #3e8e41;
       }
       
+      th, td:nth-child(7):nth-child(17) {
+  background-color: #f0ffff;
+}
+      th, td:nth-child(18):nth-child(28) {
+  background-color: white;
+}
+    th, td:nth-child(29):nth-child(41) {
+  background-color: #f0ffff;
+}
+      th, td:nth-child(42):nth-child(53) {
+  background-color: white;
+}
+    th, td:nth-child(54):nth-child(57) {
+  background-color: #f0ffff;
+}
+      th, td:nth-child(58):nth-child(63) {
+  background-color: white;
+}
+    th, td:nth-child(63):nth-child(70) {
+  background-color: #f0ffff;
+}
+      
       button.print {
         background-color: #008CBA;
         border: none;
@@ -247,9 +269,9 @@ document.addEventListener('DOMContentLoaded', function() {
     <table>
       <thead>
         <tr>
-          <th>항목명</th>
+          <th>품목</th>
           <th>수량</th>
-          <th>증감</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
