--- a/index.html
+++ b/index.html
@@ -47,25 +47,10 @@
         background-color: #3e8e41;
       }
       
-      th, td:nth-child(7):nth-child(17) {
-  background-color: #f0ffff;
-}
-      th, td:nth-child(18):nth-child(28) {
-  background-color: white;
-}
-    th, td:nth-child(29):nth-child(41) {
-  background-color: #f0ffff;
-}
-      th, td:nth-child(42):nth-child(53) {
-  background-color: white;
-}
-    th, td:nth-child(54):nth-child(57) {
-  background-color: #f0ffff;
-}
-      th, td:nth-child(58):nth-child(63) {
-  background-color: white;
-}
-    th, td:nth-child(63):nth-child(70) {
+tr:nth-child(n+8):nth-child(-n+18),
+tr:nth-child(n+30):nth-child(-n+42),
+tr:nth-child(n+55):nth-child(-n+58),
+tr:nth-child(n+63):nth-child(-n+71) {
   background-color: #f0ffff;
 }
       
