--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 table tr:nth-child(n+30):nth-child(-n+42),
 table tr:nth-child(n+55):nth-child(-n+58),
 table tr:nth-child(n+63):nth-child(-n+71) {
-  background-color: #ebd2ff;
+  background-color: #f0ffff;
+  border: 1px solid #ddd;
 }
 
       
