--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 table tr:nth-child(n+30):nth-child(-n+42),
 table tr:nth-child(n+55):nth-child(-n+58),
 table tr:nth-child(n+63):nth-child(-n+71) {
-  background-color: #d6d6d6;
+  background-color: #e0ffff;
   border: 1px solid #ddd;
 }
 
