--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function getCurrentDate() {
 
         
         var result = "";
-                  result += "클랩피자 청담점  \"" + getCurrentDate() + "\" 공산품 발주<br>-----------------<br>";
+                  result += "클랩피자 청담점  \"" + getCurrentDate() + "\" 공산품 발주<br>-----------------<br><br>";
 
         for (var i = 0; i < items.length; i++) {
           if (items[i].quantity > 0) {
